--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Controle de Gastos Diários</h1>
+    <h1>Controle de Ganhos</h1>
     <div class="container">
         <div class="form-section">
             <h2>Adicionar Transação</h2>
