--- a/Custo-km-litros/index.html
+++ b/Custo-km-litros/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Calculadora de Custo por Km Rodado</h1>
+        <button id="back-button">Voltar ao Controle de Gastos</button>
         <form id="calcForm">
             <label for="precoLitro">Preço do Litro (R$):</label>
             <input type="number" id="precoLitro" step="0.01" required>
