--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <p>Saldo: R$ <span id="saldo">0.00</span></p>
             <p>Porcentagem de Lucro: <span id="porcentagem-lucro">0.00</span>%</p>
             <button id="reset-button">Resetar Dados</button>
+            <button id="custo-km-litros-button">Custo Km/Litros</button>
         </div>
         
         <div class="chart">
