--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Controle de Gastos</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="shortcut icon" href="imagens/favicorUber99.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Controle de Ganhos</h1>
